Sonar Issues: Find Bugs using entrySet to iterate through maps rather than keyset